--- a/src/assets/scss/components/_form-widget.scss
+++ b/src/assets/scss/components/_form-widget.scss
@@ -2,12 +2,18 @@
 	margin-bottom: 70px;
 	.col {
 		width: 50%;
+		@media (max-width: 991px) {
+			width: 100%;
+		}
 	}
 	.form-col {
 		.inner-wrap {
 			box-shadow: 0px 0px 5px 0px #0000001f;
 			background-color: rgb(241, 244, 248);
 			padding: 50px 20px 40px;
+			@media (max-width: 575px) {
+				padding: 50px 10px 40px;
+			}
 		}
 		.title {
 			font-size: 30px;
@@ -17,51 +23,63 @@
 			text-align: center;
 		}
 	}
+	.form-head {
+		display: flex;
+		padding: 20px 0;
+		border-bottom: 5px solid rgb(20, 114, 168);
+		position: relative;
+		&:after {
+			content: '';
+			position: absolute;
+			left: 85px;
+			bottom: 0;
+			border: 10px solid transparent;
+			border-bottom: 10px solid rgb(20, 114, 168);
+			transition: all 0.5s;
+			@media (max-width: 575px) {
+				left: 55px;
+			}
+		}
+		&.billing-step {
+			&:after {
+				left: calc(100% - 135px);
+				@media (max-width: 575px) {
+					left: calc(100% - 105px);
+				}
+			}
+		}
+	}
+	.head-item {
+		margin: 0 auto;
+		max-width: 130px;
+		width: 50%;
+		color: rgb(115, 115, 115);
+		@media (max-width: 575px) {
+			padding: 0 15px;
+		}
+		p {
+			margin: 0;
+			font-size: 12px;
+		}
+		.title-line {
+			font-size: 18px;
+			font-weight: 700;
+			line-height: 1.2;
+			margin-left: -16px;
+			@media (max-width: 575px) {
+				font-size: 15px;
+			}
+		}
+		&.active {
+			.title-line {
+				color: rgb(20, 114, 168);
+			}
+		}
+	}
 	.form {
 		border: 2px solid rgb(228, 228, 228);
 		background-color: rgb(255, 255, 255);
 		margin-bottom: 40px;
-		.form-head {
-			display: flex;
-			padding: 20px 0;
-			border-bottom: 5px solid rgb(20, 114, 168);
-			position: relative;
-			&:after {
-				content: '';
-				position: absolute;
-				left: 85px;
-				bottom: 0;
-				border: 10px solid transparent;
-				border-bottom: 10px solid rgb(20, 114, 168);
-				transition: all 0.5s;
-			}
-			&.billing-step {
-				&:after {
-					left: calc(100% - 135px);
-				}
-			}
-		}
-		.head-item {
-			margin: 0 auto;
-			max-width: 130px;
-			width: 50%;
-			color: rgb(115, 115, 115);
-			p {
-				margin: 0;
-				font-size: 12px;
-			}
-			.title-line {
-				font-size: 18px;
-				font-weight: 700;
-				line-height: 1.2;
-				margin-left: -16px;
-			}
-			&.active {
-				.title-line {
-					color: rgb(20, 114, 168);
-				}
-			}
-		}
 		.form-body {
 			border-top: 2px solid #e4e4e4;
 			padding: 20px 20px 30px;
@@ -127,6 +145,40 @@
 		&.active {
 			display: block;
 		}
+		.t-head {
+			display: flex;
+			justify-content: space-between;
+			border-bottom: 1px solid rgb(226, 226, 226);
+			margin: 25px 0 10px;
+			padding: 0 0 5px;
+			p {
+				margin: 0;
+				font-size: 14px;
+				font-weight: 700;
+			}
+		}
+		.t-foot {
+			display: flex;
+			justify-content: space-between;
+			border-bottom: 1px solid rgb(226, 226, 226);
+			margin: 15px 0 10px;
+			padding: 0 0 5px;
+			p {
+				margin: 0;
+				font-size: 14px;
+				font-weight: 700;
+			}
+		}
+		.amount-row {
+			display: flex;
+			justify-content: space-between;
+			margin-bottom: 20px;
+			p {
+				margin: 0;
+				font-size: 14px;
+				font-weight: 700;
+			}
+		}
 	}
 	.back-btn {
 		text-decoration: underline;
@@ -134,13 +186,29 @@
 		color: rgb(114, 114, 114);
 	}
 	.radio-group-options {
+		margin: 0 0 20px;
 		label {
-			position: relative;
-			padding: 0 0 0 5px;
+			padding: 5px 0 0 35px;
 			cursor: pointer;
 			display: inline-block;
 			font-size: 14px;
+			&:after {
+				content: '';
+				display: none;
+				width: 20px;
+				height: 20px;
+				background: #2474ed;
+				border-radius: 50%;
+				width: 10px;
+				height: 10px;
+				position: absolute;
+				top: 8px;
+				left: 10px;
+			}
 		}
+	}
+	.form-check {
+		position: relative;
 	}
 	.form-check-input {
 		width: 20px;
@@ -149,10 +217,45 @@
 		background-color: #fff;
 		border: 2px solid #757575;
 		vertical-align: bottom;
+		position: absolute;
+		top: 0;
+		left: 0;
 		&:checked {
-			background-color: #0d6efd;
 			border-color: #0d6efd;
-			background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
+			& + label {
+				&:after {
+					display: block;
+				}
+			}
+		}
+	}
+	.form-check-row {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		margin-bottom: 10px;
+	}
+	.form-price {
+		font-size: 14px;
+		font-weight: 300;
+		p {
+			margin: 0;
+		}
+	}
+	.form-control-group {
+		display: flex;
+		.form-control-inner {
+			border: 0;
+			background: transparent;
+			&:nth-child(1) {
+				width: 50%;
+			}
+			&:nth-child(2) {
+				width: 30%;
+			}
+			&:nth-child(3) {
+				width: 20%;
+			}
 		}
 	}
 }
