--- a/src/assets/scss/components/_title-widget.scss
+++ b/src/assets/scss/components/_title-widget.scss
@@ -1,5 +1,8 @@
 .title-widget{
-	margin: 70px 0 70px;
+	margin: 70px 0;
+	@media (max-width: 575px) {
+		margin: 50px 0;
+	}
 	.cta-area {
 		background-color: rgb(217, 100, 100);
 		text-align: center;
@@ -12,6 +15,9 @@
 			font-size: 22px;
 			font-weight: 700;
 			margin: 0;
+			@media (max-width: 575px) {
+				font-size: 18px;
+			}
 		}
 	}
 	.title {
@@ -21,5 +27,11 @@
 		text-align: center;
 		max-width: 872px;
 		margin: 25px auto 0;
+		@media (max-width: 767px) {
+			font-size: 36px;
+		}
+		@media (max-width: 575px) {
+			font-size: 28px;
+		}
 	}
 }
