--- a/src/assets/scss/components/_form-widget.scss
+++ b/src/assets/scss/components/_form-widget.scss
@@ -1,265 +1,265 @@
 .form-widget {
-	margin-bottom: 70px;
-	.col {
-		width: 50%;
-		@media (max-width: 991px) {
-			width: 100%;
-		}
-	}
-	.form-col {
-		.inner-wrap {
-			box-shadow: 0px 0px 5px 0px #0000001f;
-			background-color: rgb(241, 244, 248);
-			padding: 50px 20px 40px;
-			@media (max-width: 575px) {
-				padding: 50px 10px 40px;
-			}
-		}
-		.title {
-			font-size: 30px;
-			font-weight: 300;
-			line-height: 1.2;
-			margin: 0 0 20px;
-			text-align: center;
-		}
-	}
-	.form-head {
-		display: flex;
-		padding: 20px 0;
-		border-bottom: 5px solid rgb(20, 114, 168);
-		position: relative;
-		&:after {
-			content: '';
-			position: absolute;
-			left: 85px;
-			bottom: 0;
-			border: 10px solid transparent;
-			border-bottom: 10px solid rgb(20, 114, 168);
-			transition: all 0.5s;
-			@media (max-width: 575px) {
-				left: 55px;
-			}
-		}
-		&.billing-step {
-			&:after {
-				left: calc(100% - 135px);
-				@media (max-width: 575px) {
-					left: calc(100% - 105px);
-				}
-			}
-		}
-	}
-	.head-item {
-		margin: 0 auto;
-		max-width: 130px;
-		width: 50%;
-		color: rgb(115, 115, 115);
-		@media (max-width: 575px) {
-			padding: 0 15px;
-		}
-		p {
-			margin: 0;
-			font-size: 12px;
-		}
-		.title-line {
-			font-size: 18px;
-			font-weight: 700;
-			line-height: 1.2;
-			margin-left: -16px;
-			@media (max-width: 575px) {
-				font-size: 15px;
-			}
-		}
-		&.active {
-			.title-line {
-				color: rgb(20, 114, 168);
-			}
-		}
-	}
-	.form {
-		border: 2px solid rgb(228, 228, 228);
-		background-color: rgb(255, 255, 255);
-		margin-bottom: 40px;
-		.form-body {
-			border-top: 2px solid #e4e4e4;
-			padding: 20px 20px 30px;
-		}
-		.form-designation {
-			line-height: 19px;
-			color: rgb(20, 114, 168);
-			font-weight: 700;
-			margin: 0 0 20px;
-		}
-		.form-group {
-			margin-bottom: 15px;
-		}
-		.form-label {
-			color: rgb(86, 86, 86);
-			font-weight: 700;
-			display: block;
-			margin: 0 0 5px;
-		}
-		.form-control {
-			font-size: 14px;
-			border: 1px solid rgb(156, 156, 156);
-			border-radius: 3px;
-			background-color: #efefef;
-			color: #000;
-			padding: 15px;
-			width: 100%;
-		}
-		.iti--allow-dropdown {
-			display: flex;
-			width: 100%;
-			.form-control {
-				width: calc(100% - 100px);
-				margin: 0 0 0 auto;
-				padding-left: 15px !important;
-			}
-		}
-		.iti__flag-container {
-			font-size: 14px;
-			border: 1px solid rgb(156, 156, 156);
-			border-radius: 3px;
-			background-color: #efefef;
-			color: #000;
-			min-width: 85px;
-		}
-		.btn {
-			margin-top: 10px;
-			width: 100%;
-		}
-		.small-text {
-			font-size: 12px;
-			font-weight: 100;
-			text-align: center;
-		}
-	}
-	.join-text {
-		text-align: center;
-		margin: 10px 0;
-	}
+  margin-bottom: 70px;
+  .col {
+    width: 50%;
+    @media (max-width: 991px) {
+      width: 100%;
+    }
+  }
+  .form-col {
+    .inner-wrap {
+      box-shadow: 0px 0px 5px 0px #0000001f;
+      background-color: rgb(241, 244, 248);
+      padding: 50px 20px 40px;
+      @media (max-width: 575px) {
+        padding: 50px 10px 40px;
+      }
+    }
+    .title {
+      font-size: 30px;
+      font-weight: 300;
+      line-height: 1.2;
+      margin: 0 0 20px;
+      text-align: center;
+    }
+  }
+  .form-head {
+    display: flex;
+    padding: 20px 0;
+    border-bottom: 5px solid rgb(20, 114, 168);
+    position: relative;
+    &:after {
+      content: "";
+      position: absolute;
+      left: 85px;
+      bottom: 0;
+      border: 10px solid transparent;
+      border-bottom: 10px solid rgb(20, 114, 168);
+      transition: all 0.5s;
+      @media (max-width: 575px) {
+        left: 55px;
+      }
+    }
+    &.billing-step {
+      &:after {
+        left: calc(100% - 135px);
+        @media (max-width: 575px) {
+          left: calc(100% - 105px);
+        }
+      }
+    }
+  }
+  .head-item {
+    margin: 0 auto;
+    max-width: 130px;
+    width: 50%;
+    color: rgb(115, 115, 115);
+    @media (max-width: 575px) {
+      padding: 0 15px;
+    }
+    p {
+      margin: 0;
+      font-size: 12px;
+    }
+    .title-line {
+      font-size: 18px;
+      font-weight: 700;
+      line-height: 1.2;
+      margin-left: -16px;
+      @media (max-width: 575px) {
+        font-size: 15px;
+      }
+    }
+    &.active {
+      .title-line {
+        color: rgb(20, 114, 168);
+      }
+    }
+  }
+  .form {
+    border: 2px solid rgb(228, 228, 228);
+    background-color: rgb(255, 255, 255);
+    margin-bottom: 40px;
+    .form-body {
+      border-top: 2px solid #e4e4e4;
+      padding: 20px 20px 30px;
+    }
+    .form-designation {
+      line-height: 19px;
+      color: rgb(20, 114, 168);
+      font-weight: 700;
+      margin: 0 0 20px;
+    }
+    .form-group {
+      margin-bottom: 15px;
+    }
+    .form-label {
+      color: rgb(86, 86, 86);
+      font-weight: 700;
+      display: block;
+      margin: 0 0 5px;
+    }
+    .form-control {
+      font-size: 14px;
+      border: 1px solid rgb(156, 156, 156);
+      border-radius: 3px;
+      background-color: #efefef;
+      color: #000;
+      padding: 15px;
+      width: 100%;
+    }
+    .iti--allow-dropdown {
+      display: flex;
+      width: 100%;
+      .form-control {
+        width: calc(100% - 100px);
+        margin: 0 0 0 auto;
+        padding-left: 15px !important;
+      }
+    }
+    .iti__flag-container {
+      font-size: 14px;
+      border: 1px solid rgb(156, 156, 156);
+      border-radius: 3px;
+      background-color: #efefef;
+      color: #000;
+      min-width: 85px;
+    }
+    .btn {
+      margin-top: 10px;
+      width: 100%;
+    }
+    .small-text {
+      font-size: 12px;
+      font-weight: 100;
+      text-align: center;
+    }
+  }
+  .join-text {
+    text-align: center;
+    margin: 10px 0;
+  }
 
-	.second-form-step {
-		// display: none;
-		&.active {
-			display: block;
-		}
-		.t-head {
-			display: flex;
-			justify-content: space-between;
-			border-bottom: 1px solid rgb(226, 226, 226);
-			margin: 25px 0 10px;
-			padding: 0 0 5px;
-			p {
-				margin: 0;
-				font-size: 14px;
-				font-weight: 700;
-			}
-		}
-		.t-foot {
-			display: flex;
-			justify-content: space-between;
-			border-bottom: 1px solid rgb(226, 226, 226);
-			margin: 15px 0 10px;
-			padding: 0 0 5px;
-			p {
-				margin: 0;
-				font-size: 14px;
-				font-weight: 700;
-			}
-		}
-		.amount-row {
-			display: flex;
-			justify-content: space-between;
-			margin-bottom: 20px;
-			p {
-				margin: 0;
-				font-size: 14px;
-				font-weight: 700;
-			}
-		}
-	}
-	.back-btn {
-		text-decoration: underline;
-		font-size: 11px;
-		color: rgb(114, 114, 114);
-	}
-	.radio-group-options {
-		margin: 0 0 20px;
-		label {
-			padding: 5px 0 0 35px;
-			cursor: pointer;
-			display: inline-block;
-			font-size: 14px;
-			&:after {
-				content: '';
-				display: none;
-				width: 20px;
-				height: 20px;
-				background: #2474ed;
-				border-radius: 50%;
-				width: 10px;
-				height: 10px;
-				position: absolute;
-				top: 8px;
-				left: 10px;
-			}
-		}
-	}
-	.form-check {
-		position: relative;
-	}
-	.form-check-input {
-		width: 20px;
-		height: 20px;
-		border-radius: 50%;
-		background-color: #fff;
-		border: 2px solid #757575;
-		vertical-align: bottom;
-		position: absolute;
-		top: 0;
-		left: 0;
-		&:checked {
-			border-color: #0d6efd;
-			& + label {
-				&:after {
-					display: block;
-				}
-			}
-		}
-	}
-	.form-check-row {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		margin-bottom: 10px;
-	}
-	.form-price {
-		font-size: 14px;
-		font-weight: 300;
-		p {
-			margin: 0;
-		}
-	}
-	.form-control-group {
-		display: flex;
-		.form-control-inner {
-			border: 0;
-			background: transparent;
-			&:nth-child(1) {
-				width: 50%;
-			}
-			&:nth-child(2) {
-				width: 30%;
-			}
-			&:nth-child(3) {
-				width: 20%;
-			}
-		}
-	}
+  .second-form-step {
+    display: none;
+    &.active {
+      display: block;
+    }
+    .t-head {
+      display: flex;
+      justify-content: space-between;
+      border-bottom: 1px solid rgb(226, 226, 226);
+      margin: 25px 0 10px;
+      padding: 0 0 5px;
+      p {
+        margin: 0;
+        font-size: 14px;
+        font-weight: 700;
+      }
+    }
+    .t-foot {
+      display: flex;
+      justify-content: space-between;
+      border-bottom: 1px solid rgb(226, 226, 226);
+      margin: 15px 0 10px;
+      padding: 0 0 5px;
+      p {
+        margin: 0;
+        font-size: 14px;
+        font-weight: 700;
+      }
+    }
+    .amount-row {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 20px;
+      p {
+        margin: 0;
+        font-size: 14px;
+        font-weight: 700;
+      }
+    }
+  }
+  .back-btn {
+    text-decoration: underline;
+    font-size: 11px;
+    color: rgb(114, 114, 114);
+  }
+  .radio-group-options {
+    margin: 0 0 20px;
+    label {
+      padding: 5px 0 0 35px;
+      cursor: pointer;
+      display: inline-block;
+      font-size: 14px;
+      &:after {
+        content: "";
+        display: none;
+        width: 20px;
+        height: 20px;
+        background: #2474ed;
+        border-radius: 50%;
+        width: 10px;
+        height: 10px;
+        position: absolute;
+        top: 8px;
+        left: 10px;
+      }
+    }
+  }
+  .form-check {
+    position: relative;
+  }
+  .form-check-input {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #fff;
+    border: 2px solid #757575;
+    vertical-align: bottom;
+    position: absolute;
+    top: 0;
+    left: 0;
+    &:checked {
+      border-color: #0d6efd;
+      & + label {
+        &:after {
+          display: block;
+        }
+      }
+    }
+  }
+  .form-check-row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 10px;
+  }
+  .form-price {
+    font-size: 14px;
+    font-weight: 300;
+    p {
+      margin: 0;
+    }
+  }
+  .form-control-group {
+    display: flex;
+    .form-control-inner {
+      border: 0;
+      background: transparent;
+      &:nth-child(1) {
+        width: 50%;
+      }
+      &:nth-child(2) {
+        width: 30%;
+      }
+      &:nth-child(3) {
+        width: 20%;
+      }
+    }
+  }
 }
 
 #card-element {
-	width: 100%;
+  width: 100%;
 }
