--- a/src/assets/scss/components/_form-widget.scss
+++ b/src/assets/scss/components/_form-widget.scss
@@ -128,6 +128,8 @@
     .btn {
       margin-top: 10px;
       width: 100%;
+      position: relative;
+      height: 71px;
     }
     .small-text {
       font-size: 12px;
@@ -244,6 +246,8 @@
   }
   .form-control-group {
     display: flex;
+    align-items: center;
+    flex-wrap: wrap;
     .form-control-inner {
       border: 0;
       background: transparent;
@@ -258,8 +262,20 @@
       }
     }
   }
+  .card-error {
+    width: 100%;
+  }
 }
 
 #card-element {
   width: 100%;
+}
+
+.result-message {
+  color: #004085;
+  background-color: #cce5ff;
+  border-color: #b8daff;
+  padding: 15px 15px;
+  text-align: center;
+  border-radius: 3px;
 }
