--- a/src/assets/scss/components/_text-col-widget.scss
+++ b/src/assets/scss/components/_text-col-widget.scss
@@ -4,28 +4,43 @@
 	}
 	.img-holder {
 		margin-top: -50px;
+		@media (max-width: 991px) {
+			margin-top: 0;
+		}
 		img {
 			max-width: 100%;
 		}
 	}
 	.title {
-		font-size: 28px;
-		font-weight: 700;
+		font-size: 27px;
+		font-weight: 500;
 		margin: 0;
+		padding-left: 20px;
+		@media (max-width: 575px) {
+			padding-left: 0;
+		}
 		span {
 			text-decoration: underline;
 		}
 	}
 	.list {
 		margin: 30px 0 50px;
+		padding-left: 55px;
+		@media (max-width: 575px) {
+			padding-left: 0;
+		}
 		li {
 			font-size: 18px;
 			color: rgb(0, 0, 0);
 			font-weight: 700;
 			margin-bottom: 10px;
+			position: relative;
+			padding-left: 35px;
 			span {
 				color: rgb(196, 88, 88);
-				margin-right: 20px;
+				position: absolute;
+				left: 0;
+				top: 0;
 			}
 		}
 	}
@@ -33,6 +48,7 @@
 		text-align: center;
 		img {
 			margin: 10px 0;
+			max-width: 182px;
 		}
 	}
 }
