--- a/src/assets/scss/components/_form-widget.scss
+++ b/src/assets/scss/components/_form-widget.scss
@@ -336,6 +336,14 @@
   z-index: -1;
 }
 
+.hidden-form {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  z-index: -1;
+}
+
  #_form_3_ input[type="text"]._has_error,#_form_3_ textarea._has_error { border:#f37c7b 1px solid; }
  #_form_3_ input[type="checkbox"]._has_error { outline:#f37c7b 1px solid; }
  #_form_3_ ._error { display:block; position:absolute; font-size:14px; z-index:10000001; }
@@ -349,3 +357,14 @@
  #_form_3_ ._error-inner._no_arrow { margin-bottom:10px; }
  #_form_3_ ._error-arrow { position:absolute; width:0; height:0; }
  #_form_3_ ._error-html { margin-bottom:10px; }
+
+
+
+
+
+
+
+
+
+
+ 
