--- a/src/assets/scss/components/_form-widget.scss
+++ b/src/assets/scss/components/_form-widget.scss
@@ -313,7 +313,61 @@
   .card-error {
     width: 100%;
   }
+
+  .custom-checkbox {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    input[type=checkbox] {
+      visibility: hidden;
+    }
+    label {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background: #fff;
+      border: 2px solid #757575;
+      &:after {
+        content: "";
+        width: 10px;
+        height: 6px;
+        position: absolute;
+        top: 4px;
+        left: 3px;
+        border: 3px solid #0d6efd;
+        border-top: none;
+        border-right: none;
+        background: transparent;
+        opacity: 0;
+        transform: rotate(-45deg);
+      }
+    }
+    input[type=checkbox]:checked + label {
+      border-color: #0d6efd;
+    }
+    input[type=checkbox]:checked + label:after {
+      opacity: 1;
+    }
+  }
+
+  
+  .check-label {
+    padding-left: 35px;
+    margin: 0;
+    a {
+      color: #0d6efd;
+    }
+  }
+
+  .fg-top {
+    margin-top: 35px;
+  }
 }
+
 
 #card-element {
   width: 100%;
