--- a/src/assets/scss/components/_form-widget.scss
+++ b/src/assets/scss/components/_form-widget.scss
@@ -353,8 +353,6 @@
       opacity: 1;
     }
   }
-
-  
   .check-label {
     padding-left: 35px;
     margin: 0;
@@ -362,12 +360,17 @@
       color: #0d6efd;
     }
   }
-
   .fg-top {
     margin-top: 35px;
   }
 }
 
+.btn {
+  &.disabled {
+    pointer-events: none;
+    opacity: 0.7;
+  }
+}
 
 #card-element {
   width: 100%;
