--- a/src/assets/scss/components/_form-widget.scss
+++ b/src/assets/scss/components/_form-widget.scss
@@ -170,6 +170,9 @@
       font-weight: 100;
       text-align: center;
     }
+    .fg-top {
+      margin: 20px 0 0;
+    }
   }
   .paypal-holder {
     .join-text {
@@ -319,8 +322,8 @@
   }
 
   .custom-checkbox {
-    width: 20px;
-    height: 20px;
+    width: 18px;
+    height: 18px;
     position: absolute;
     top: 0;
     left: 0;
@@ -340,8 +343,8 @@
         width: 10px;
         height: 6px;
         position: absolute;
-        top: 4px;
-        left: 3px;
+        top: 3px;
+        left: 2px;
         border: 3px solid #0d6efd;
         border-top: none;
         border-right: none;
@@ -358,14 +361,14 @@
     }
   }
   .check-label {
-    padding-left: 35px;
+    padding-left: 25px;
+    padding-top: 2px;
     margin: 0;
+    font-size: 14px;
+    font-style: italic;
     a {
       color: #0d6efd;
     }
-  }
-  .fg-top {
-    margin-top: 35px;
   }
 }
 
