--- a/src/assets/scss/components/_form-widget.scss
+++ b/src/assets/scss/components/_form-widget.scss
@@ -317,6 +317,11 @@
       }
     }
   }
+  #card-form-control {
+    &.red {
+      border-color:#fa755a;
+    }
+  }
   .card-error {
     width: 100%;
     color: #fa755a;
@@ -408,6 +413,28 @@
   left: 0;
   opacity: 0;
   z-index: -1;
+}
+
+#overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: rgba(51,51,51,0.7);
+  z-index: 10;
+  &.hidden {
+    display: none;
+  }
+  .ov_text {
+    position: absolute;
+    top: 50vh;
+    margin-top: -20px;
+    left: 50%;
+    margin-left: -220px;
+    font-size: 30px;
+    color: #ffffff;
+  }
 }
 
  #_form_3_ input[type="text"]._has_error,#_form_3_ textarea._has_error { border:#f37c7b 1px solid; }
